--- a/lib/components/Header.css
+++ b/lib/components/Header.css
@@ -3,6 +3,16 @@
     src: url(../assets/fonts/roboto-v18-latin-regular.woff2);
 }
 
+.current > a:before {
+    content: "";
+    position: absolute;
+    left: 17.5%;
+    bottom: 0;
+    height: 1px;
+    width: 65%;
+    border-bottom: #000 1px solid;
+}
+
 .absolute {
     position: absolute;
     top: 0;
@@ -25,11 +35,12 @@
 .container-fluid > ul.navbar-nav > li > a {
     color: #000;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 500;
     font-family: Roboto, sans-serif;
 }
 
-.navbar-brand > a:hover, .navbar-brand > a  {
+.navbar-brand > a:hover,
+.navbar-brand > a {
     text-decoration: none;
 }
 
