--- a/lib/components/Header.css
+++ b/lib/components/Header.css
@@ -1,6 +1,22 @@
+/* roboto-regular - latin */
 @font-face {
     font-family: Roboto;
-    src: url(../assets/fonts/roboto-v18-latin-regular.woff2);
+    font-style: normal;
+    font-weight: 400;
+    src: url('../assets/fonts/roboto-v18-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Roboto'), local('Roboto-Regular'),
+        url('../assets/fonts/roboto-v18-latin-regular.eot?#iefix')
+            format('embedded-opentype'),
+        /* IE6-IE8 */ url('../assets/fonts/roboto-v18-latin-regular.woff2')
+            format('woff2'),
+        /* Super Modern Browsers */
+            url('../assets/fonts/roboto-v18-latin-regular.woff') format('woff'),
+        /* Modern Browsers */
+            url('../assets/fonts/roboto-v18-latin-regular.ttf')
+            format('truetype'),
+        /* Safari, Android, iOS */
+            url('../assets/fonts/roboto-v18-latin-regular.svg#Roboto')
+            format('svg'); /* Legacy iOS */
 }
 
 .absolute {
@@ -30,16 +46,16 @@
 }
 
 .navbar-collapse > ul.navbar-nav > li > a:hover::before {
-    content: "";
+    content: '';
     position: absolute;
     left: 17.5%;
     bottom: 0;
     height: 1px;
     width: 65%;
-    border-bottom: #fff 1px solid;
+    border-bottom: #000 2px solid;
 }
 
-.navbar-collapse > ul.navbar-nav > li > a:hover, .navbar-collapse > ul.navbar-nav > li.current > a {
+.navbar-collapse > ul.navbar-nav > li > a:hover {
     font-weight: bold;
-    color: #fff;
+    color: #000;
 }
