--- a/lib/components/Controller.css
+++ b/lib/components/Controller.css
@@ -1,12 +1,9 @@
 #masthead {
     background-image: url("../assets/mast-head.jpg");
-    height: 800px; /* You must set a specified height */
+    height: 500px; /* You must set a specified height */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
-    
-    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-    min-height: 100vh; /* These two lines are counted as one :-)       */
 }
 
 .fullscreen, #masthead {
@@ -21,4 +18,6 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 2;
+    background-color: rgba(211,211,211,0.7);
 }
