--- a/lib/components/Header.css
+++ b/lib/components/Header.css
@@ -39,10 +39,11 @@
 }
 
 .navbar-collapse > ul.navbar-nav > li > a {
-    color: #000;
+    color: #fff;
     font-size: 20px;
     font-weight: 500;
     font-family: Roboto, sans-serif;
+    filter: drop-shadow(0 0 0.75rem #000);
 }
 
 .navbar-collapse > ul.navbar-nav > li > a:hover::before {
@@ -52,10 +53,10 @@
     bottom: 0;
     height: 1px;
     width: 65%;
-    border-bottom: #000 2px solid;
+    border-bottom: #fff 1.5px solid;
 }
 
 .navbar-collapse > ul.navbar-nav > li > a:hover {
     font-weight: bold;
-    color: #000;
+    color: #fff;
 }
