--- a/lib/components/SongDisplay.css
+++ b/lib/components/SongDisplay.css
@@ -1,3 +1,35 @@
+/* roboto-regular - latin */
+@font-face {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 400;
+    src: url('../assets/fonts/roboto-v18-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Roboto'), local('Roboto-Regular'),
+        url('../assets/fonts/roboto-v18-latin-regular.eot?#iefix')
+            format('embedded-opentype'),
+        /* IE6-IE8 */ url('../assets/fonts/roboto-v18-latin-regular.woff2')
+            format('woff2'),
+        /* Super Modern Browsers */
+            url('../assets/fonts/roboto-v18-latin-regular.woff') format('woff'),
+        /* Modern Browsers */
+            url('../assets/fonts/roboto-v18-latin-regular.ttf')
+            format('truetype'),
+        /* Safari, Android, iOS */
+            url('../assets/fonts/roboto-v18-latin-regular.svg#Roboto')
+            format('svg'); /* Legacy iOS */
+}
+
 span.glyphicon {
     width: "30px";
+}
+
+.shadow {
+    filter: drop-shadow(0 0 0.75rem #000);
+}
+
+#song-info {
+    display: flex;
+    flex-direction: column;
+    font-family: Roboto, sans-serif;
+    font-size: 20px;
 }
