--- a/lib/components/Controller.css
+++ b/lib/components/Controller.css
@@ -1,6 +1,6 @@
 #masthead {
     background-image: url("../assets/mast-head.jpg");
-    height: 500px; /* You must set a specified height */
+    height: 100%; /* You must set a specified height */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
