--- a/lib/components/Header.css
+++ b/lib/components/Header.css
@@ -39,7 +39,7 @@
 }
 
 .navbar-collapse > ul.navbar-nav > li > a {
-    color: #000;
+    color: #404040;
     font-size: 20px;
     font-weight: 600;
     font-family: Roboto, sans-serif;
@@ -52,11 +52,17 @@
     bottom: 0;
     height: 1px;
     width: 65%;
-    border-bottom: #fff 1.5px solid;
+}
+
+.navbar-collpase.collapse.in {
+    border: none;
+}
+
+.shadow, .navbar-collapse > ul.navbar-nav > li > a:hover {
+    filter: drop-shadow(0 0 0.5rem #000);
 }
 
 .navbar-collapse > ul.navbar-nav > li > a:hover {
     font-weight: bold;
     color: #fff;
-    filter: drop-shadow(0 0 0.75rem #000);
 }
