--- a/lib/components/Camera.css
+++ b/lib/components/Camera.css
@@ -1,12 +1,10 @@
 #video-container {
     position: absolute;
-
     display: flex;
     align-items: center;
-}
-
-#video-stream:hover {
-    background-color: rgba(211,211,211,0.7);
+    top: 30%;
+    left: 0px;
+    z-index:3;
 }
 
 #minimize-button, #video-play-button {
@@ -16,10 +14,22 @@
 #minimize-button {
     display: block;
     height: 100%;
-    width: 5%;
-    right: -5%;
+    width: 10%;
+    right: -10%;
     background-color: #fff;
     text-align: center;
+}
+
+#video-play-button > span, #video-stream {
+    color: white;
+}
+
+#minimize-button > span {
+    position: absolute;
+    color: rgb(211,211,211);
+    font-size: 15px;
+    height: 10%;
+    top: 45%;
 }
 
 #minimize-button:hover, #video-play-button {
@@ -31,4 +41,6 @@
     left: 40%;
     top: 40%;
     width: 20%;
+    opacity: 0.7;
+    z-index:4;
 }
