--- a/lib/components/SongDisplay.css
+++ b/lib/components/SongDisplay.css
@@ -42,10 +42,22 @@ span.glyphicon {
     color: #d3d3d3;
 }
 
+#album-img-cont {
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+#album-img-cont {
+    margin-bottom: 5%;
+    height: 50%;
+}
+
+#album-img-cont > a {
+    margin: 0 auto;
+}
+
 #album-img {
-    margin-bottom: 6%;
-    height: 70%;
-    display: block;
+    max-width: 100%;
 }
 
 #song-name {
@@ -58,11 +70,10 @@ span.glyphicon {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 6%;
+    margin-top: 5%;
 }
 
 #song-info {
-    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
