--- a/lib/components/Camera.css
+++ b/lib/components/Camera.css
@@ -24,12 +24,16 @@
     color: white;
 }
 
+#video-stream {
+    background-color: white;
+}
+
 #minimize-button > span {
     position: absolute;
     color: rgb(211,211,211);
-    font-size: 15px;
-    height: 10%;
-    top: 45%;
+    font-size: 10px;
+    left: 2px;
+    top: 48%;
 }
 
 #minimize-button:hover, #video-play-button {
